# jj-rag-pipeline

./: .env.example  .gitignore  CLI_REFERENCE.md  FUTURE_IMPROVEMENTS.md  RAG_IMPLEMENTATION_GUIDE.md  README.md  SETUP.md  TECHNICAL.md  cli.py  debug_output.txt  docker-compose.yml  pyproject.toml
chat/: package-lock.json  package.json  pnpm-lock.yaml
chat/app/: assistant.tsx  globals.css  layout.tsx
chat/components/: citation-marker.tsx  product-card.tsx
chat/lib/: location.ts  rag-types.ts
docs/prod-schema/: configProperties.ts  configRatings.ts  configTags.ts  configTestData.ts  configTestDataCategories.ts  configTestDataMetrics.ts  configUseCaseRelation.ts  configs.ts  productTypeProperties.ts  productTypePropertyGroups.ts  productTypePropertyValueGroups.ts  productTypePropertyValues.ts  productTypes.ts  products.ts
raw/blogs/: best-14-inch-performance-laptop-of-2025.json  best-gaming-laptops-for-600.json  best-gaming-laptops-for-long-battery-life.json  best-thin-light-performance-laptops-gamers-video-editors-coders-more.json  the-7-most-underrated-laptops-of-2025.json  the-best-laptops-for-programmers.json  the-best-laptops-for-video-editing.json  top-10-most-stylish-laptops-of-2025.json  top-20-laptops-for-battery-life.json
scripts/: check_product_diversity.py  debug_specs.py  debug_structure.py  debug_use_case_names.py  debug_use_cases.py  ingest.py  setup.py  sync.py  test_streaming_api.py  youtube.py
src/api/: main.py  (+3 more)
tests/: TODO.md  __init__.py  rag_evaluation_results.json  test_rag_evaluation.py  test_sentiment_ranking.py  test_streaming_api.py
(+103 files in other folders)
